src/style.css
html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  /* background-color: black; */
  overscroll-behavior: contain;
}

#app {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

#board {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#result {
  width: 100%;
  display: flex;
  justify-content: center;
}

.slot {
  display: flex;
  align-items: end;
}

.res {
  width: 100%;
  background-color: red;
  height: 0px;
  color: #fff;
  writing-mode: vertical-rl;
  text-orientation: upright;
}

